# AuraScan

./: .gitignore  DEVELOPING.md  LICENSE  README.md  aurascan.hook  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
aurascan/: __init__.py  __main__.py  cli.py  makepkg_wrapper.py  setup_wizard.py
aurascan/analyzers/: __init__.py  ai_static.py  base.py  clamav.py  deep_static.py  deterministic.py  dynamic.py  history.py  source_metadata.py
aurascan/assets/: __init__.py  aurascan-incident-assistant.service  aurascan-incident-assistant.timer  aurascan-incident-maintenance.service  aurascan-incident-maintenance.timer  aurascan-incident-monitor.service  aurascan-incident-safe-autopilot.service  aurascan-incidents.conf  aurascan-recovery-iso.json  aurascan-recovery-mkosi.conf  aurascan-recovery-refresh.hook  aurascan-recovery-tmpfiles.conf  aurascan-recovery.service  aurascan-updater.desktop
aurascan/core/: __init__.py  ai_provider.py  archive.py  audit.py  cache.py  compatibility.py  config.py  config_drift.py  context_provider.py  engine.py  incident_automation.py  incident_diagnostics.py  incident_repairs.py  incidents.py  kernel_module_autopilot.py  local_package_db.py  models.py  presenter.py  recovery.py  recovery_boot.py  recovery_cli.py  recovery_network.py  recovery_repairs.py  review.py  risk.py  rule_metadata.py  source_acquisition.py  trust_diff.py  (+3 more)
docs/: ANNOUNCEMENT.md  PRIVACY.md  RELEASE_CHECKLIST.md
tests/: test_ai_provider.py  test_archive.py  test_aur_warning_tune.py  test_clamav_and_cache.py  test_cli_and_engine.py  test_compatibility.py  test_config_drift.py  test_context_provider.py  test_curated_fixtures.py  test_deep_static.py  test_deep_static_fixtures.py  test_deterministic_rules.py  test_history.py  test_incident_automation.py  test_incident_diagnostics.py  test_incident_repairs.py  test_incidents.py  test_kernel_module_autopilot.py  test_local_package_db.py  test_makepkg_wrapper.py  test_models_and_risk.py  test_pacman_hook_packaging.py  test_presenter_templates.py  test_recovery.py  test_recovery_boot.py  test_recovery_network.py  test_recovery_packaging.py  test_release_readiness.py  test_rule_metadata_and_audit.py  test_setup_wizard.py  test_source_acquisition.py  test_source_metadata.py  test_trust_diff.py  test_update_policy.py  test_updater_tray.py  test_upgrade_preflight.py
tools/: audit_presenter_coverage.py  aur_warning_tune.py
(+150 files in other folders)
