[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurascan"
version = "0.1.0"
description = "AI-supported package scanner and auditor for Arch Linux."
readme = "README.md"
authors = [{name = "AuraScan Team"}]
license = {text = "MIT"}
dependencies = []
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Packaging",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
aurascan = "aurascan.cli:main"
aurascan-makepkg = "aurascan.makepkg_wrapper:main"
