[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurascan"
version = "0.5.0"
description = "AI-assisted safety layer for Arch-family package, AUR, and upgrade workflows."
readme = "README.md"
authors = [{name = "AuraScan Team"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
requires-python = ">=3.8"
keywords = [
    "arch-linux",
    "endeavouros",
    "manjaro",
    "cachyos",
    "pacman",
    "aur",
    "pkgbuild",
    "makepkg",
    "linux-security",
    "upgrade-preflight",
    "config-drift",
    "crash-diagnostics",
    "incident-recovery",
    "system-maintenance",
    "ai",
    "system-tray",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: System :: Archiving :: Packaging",
]

[project.urls]
Homepage = "https://github.com/crizzler/AuraScan"
Repository = "https://github.com/crizzler/AuraScan"
Issues = "https://github.com/crizzler/AuraScan/issues"
Releases = "https://github.com/crizzler/AuraScan/releases"

[project.optional-dependencies]
test = ["pytest>=8.0"]
updater = ["PyQt6>=6.0"]

[project.scripts]
aurascan = "aurascan.cli:main"
aurascan-makepkg = "aurascan.makepkg_wrapper:main"

[tool.setuptools.packages.find]
include = ["aurascan*"]

[tool.setuptools.package-data]
aurascan = ["assets/*"]
